Move css and js to separate files, move search function to backend, create tests for search and highlight function.

--- a/text_cross_reference/dashboard/templates/dashboard/index.html
+++ b/text_cross_reference/dashboard/templates/dashboard/index.html
@@ -1,55 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      .container {
-        display: grid;
-        grid-template-areas:
-          "header header"
-          "text1 text2"
-          "footer footer";
-        grid-template-columns: 2fr 2fr;
-        grid-template-rows: 10vh 70vh 10vh;
-        gap: 5px;
-        padding: 5px;
-        background-color: blanchedalmond;
-      }
-      .container > div {
-        background-color: rgba(255, 255, 255, 0.8);
-        padding: 10px;
-      }
-      .container > div.header {
-        grid-area: header;
-        text-align: center;
-      }
-      .container > div.text1 {
-        grid-area: text1;
-      }
-      .container > div.text2 {
-        grid-area: text2;
-      }
-      .container > div.footer {
-        grid-area: footer;
-      }
-      .card {
-        margin: 30px;
-        padding: 20px;
-        background-color: ghostwhite;
-        border-radius: 10px;
-        height: 70%;
-        overflow-y: auto;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
-          0 6px 20px 0 rgba(0, 0, 0, 0.19);
-      }
-      .search {
-        margin: 30px;
-        padding: 20px;
-        background-color: gainsboro;
-        border-radius: 10px;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
-          0 6px 20px 0 rgba(0, 0, 0, 0.19);
-      }
-    </style>
+    <link rel="stylesheet" href="{% static 'dashboard/style.css' %}" />
+    <!-- <script src="{% static 'dashboard/index.js' %}" defer></script> -->
+    <script src="https://unpkg.com/htmx.org@2.0.4" integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container">
@@ -61,6 +16,9 @@
             name="text-search-1"
             style="width: 100%; background-color: ghostwhite"
             placeholder="Search"
+            hx-get="search/"
+            hx-target="#text-1"
+            hx-trigger="keyup changed delay:500ms"
           />
         </div>
         <h2 style="text-align: center">Text 1</h2>
@@ -180,31 +138,4 @@
       <div class="footer"><h4>Notes here maybe?</h4></div>
     </div>
   </body>
-
-  <script>
-    document
-      .getElementsByName("text-search-1")[0]
-      .addEventListener("keyup", highlight);
-
-    function highlight() {
-      console.log(this.value);
-      let textElement = document.getElementById("text-1");
-      let textToSearch = textElement.innerHTML;
-      let regularExpression = new RegExp(`${this.value}`, "gi");
-      console.log(regularExpression);
-
-      let unHighlightText = textToSearch
-        .replaceAll(`<mark>`, ``)
-        .replaceAll(`</mark>`, "");
-
-      // TODO: is there a way to retain capitalization? or do I need a whole different approach?
-      //let foundWord = unHighlightText.match(regularExpression)[0];
-      let highlightedText = unHighlightText.replace(
-        regularExpression,
-        `<mark>${this.value}</mark>`
-      );
-
-      textElement.innerHTML = highlightedText;
-    }
-  </script>
 </html>
