update html page

--- a/text_cross_reference/dashboard/templates/dashboard/index.html
+++ b/text_cross_reference/dashboard/templates/dashboard/index.html
@@ -28,7 +28,8 @@
             hx-trigger="keyup changed delay:500ms"
           />
         </div>
-        <h2 style="text-align: center">Text 1</h2>
+        <h2 style="text-align: center">ESV 2016</h2>
+        <h3 style="text-align: center">Matthew 2</h3>
         <div id="text-1" class="card">
           Now after Jesus was born in Bethlehem of Judea in the days of Herod the king, behold, wise men from the east came to Jerusalem,
           saying, "Where is he who has been born king of the Jews? For we saw his star when it rose and have come to worship him."
@@ -63,7 +64,8 @@
             placeholder="Search"
           />
         </div>
-        <h2 style="text-align: center">Text 2</h2>
+        <h2 style="text-align: center">Nestle 1904</h2>
+        <h3 style="text-align: center">Matthew 2</h3>
         <div id="text-2" class="card">
           Τοῦ δὲ Ἰησοῦ γεννηθέντος ἐν Βηθλεὲμ τῆς Ἰουδαίας ἐν ἡμέραις Ἡρῴδου τοῦ βασιλέως, ἰδοὺ μάγοι ἀπὸ ἀνατολῶν παρεγένοντο εἰς Ἱεροσόλυμα
           λέγοντες Ποῦ ἐστιν ὁ τεχθεὶς βασιλεὺς τῶν Ἰουδαίων; εἴδομεν γὰρ αὐτοῦ τὸν ἀστέρα ἐν τῇ ἀνατολῇ καὶ ἤλθομεν προσκυνῆσαι αὐτῷ.
@@ -90,7 +92,7 @@
           καὶ ἐλθὼν κατῴκησεν εἰς πόλιν λεγομένην Ναζαρέτ· ὅπως πληρωθῇ τὸ ῥηθὲν διὰ τῶν προφητῶν ὅτι Ναζωραῖος κληθήσεται.
         </div>
       </div>
-      <div class="footer"><h4>Notes here maybe?</h4></div>
+      <div class="footer"><h4>Notes</h4></div>
     </div>
   </body>
 </html>
